default/freenas/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: freenas
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
  - hosts:
    - q.desertbluffs.com
  rules:
  - host: q.desertbluffs.com
    http:
      paths:
        - backend:
            serviceName: nas1
            servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: freenas2
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
  - hosts:
    - r.desertbluffs.com
  rules:
  - host: r.desertbluffs.com
    http:
      paths:
        - backend:
            serviceName: nas2
            servicePort: 443
